# IGeL

./: .gitlab-ci.yml  CMakeLists.txt  README.md
src/: center.cpp  colorize_boundaries.cpp  decimate.cpp  mesh_check.cpp  offset_surface.cpp  split.cpp  to-stl.cpp  view.cpp
